[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
repository = "https://github.com/TolkienRools/python-project-49"
description = "hexlet-code is package with basic math console games"
authors = ["Vladislav <balenkov53@gmail.com>"]
readme = "README.md"
packages = [
   { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
